[gd_scene load_steps=31 format=3 uid="uid://dv4xkidmcyi4k"]

[ext_resource type="Script" uid="uid://bvum7luk40mft" path="res://main.gd" id="1_dg77c"]
[ext_resource type="Script" uid="uid://boe4rm0qcksye" path="res://addons/godot-xr-tools/staging/staging.gd" id="2_82xsv"]
[ext_resource type="PackedScene" uid="uid://ccxxjdxanad7i" path="res://Player.tscn" id="3_4c57u"]
[ext_resource type="Texture2D" uid="uid://et1u8y28sujq" path="res://images/AllSkyFree_Sky_EpicBlueSunset_Equirect.jpg" id="4_cegan"]
[ext_resource type="Texture2D" uid="uid://wqw2xmdoe8u4" path="res://images/cockshadow2.tres" id="6_vivmo"]
[ext_resource type="Script" uid="uid://cbnaj04x78dhl" path="res://goatcode/fire_flies.gd" id="9_2cqfq"]
[ext_resource type="PackedScene" uid="uid://qo7618ftcfpt" path="res://Tools/Chisel/Breakable.tscn" id="9_yaehf"]
[ext_resource type="PackedScene" uid="uid://btmit5ngynkqv" path="res://goatcode/fire_fly.tscn" id="10_yaehf"]
[ext_resource type="AudioStream" uid="uid://c8rfuvb3a80n5" path="res://sounds/Socapex - Evol Online SFX - Punches and hits/Socapex - Monster_Hurt.wav" id="11_074og"]
[ext_resource type="Script" uid="uid://b5wjd4ct2ntsw" path="res://goatcode/inside_tree_stuff.gd" id="12_w48qg"]
[ext_resource type="PackedScene" uid="uid://d4anpju2ry1ms" path="res://assets/scenes/enviroment/Enviroment.tscn" id="12_ycdy4"]
[ext_resource type="AudioStream" uid="uid://dg1xv0ftd1wg0" path="res://sounds/vulture-1.wav" id="13_2cqfq"]
[ext_resource type="AudioStream" uid="uid://da0qt32ukjpju" path="res://sounds/bug_09.ogg" id="13_yaehf"]
[ext_resource type="AudioStream" uid="uid://ce8q413igd0j6" path="res://sounds/birds-isaiah658.ogg" id="14_2cqfq"]
[ext_resource type="PackedScene" uid="uid://dbhbxx871gscn" path="res://Tools/Chisel/chisel.tscn" id="14_vivmo"]
[ext_resource type="PackedScene" uid="uid://k0td2wlrkn2" path="res://Tools/Chisel/hammer.tscn" id="15_yaehf"]
[ext_resource type="PackedScene" uid="uid://c88sum30u4txd" path="res://scenes/cockatrice.tscn" id="16_2cqfq"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_82xsv"]
panorama = ExtResource("4_cegan")

[sub_resource type="Sky" id="Sky_lquwl"]
sky_material = SubResource("PanoramaSkyMaterial_82xsv")

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 2
background_energy_multiplier = 1.94
sky = SubResource("Sky_lquwl")
glow_intensity = 1.5
glow_blend_mode = 0
fog_enabled = true
fog_density = 0.007
fog_sky_affect = 0.353
fog_height = -1.0
fog_height_density = 0.2

[sub_resource type="PrismMesh" id="PrismMesh_yaehf"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vivmo"]
albedo_color = Color(0.282823, 0.234381, 0.159332, 1)
metallic = 0.38

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cqfq"]
albedo_color = Color(0.498597, 0.498597, 0.498597, 1)
metallic = 0.63
roughness = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yaehf"]
height = 0.174469
radius = 0.192871

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_efxa6"]
shading_mode = 0
albedo_color = Color(1, 1, 0.0196078, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_dg77c"]
material = SubResource("StandardMaterial3D_efxa6")
top_radius = 0.02
bottom_radius = 0.02
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ycdy4"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.0823529, 0.0823529, 0.0823529, 0.929412)

[sub_resource type="CylinderMesh" id="CylinderMesh_w48qg"]
material = SubResource("StandardMaterial3D_ycdy4")
bottom_radius = 5.0
height = 6.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w48qg"]
resource_name = "TreeInside"
cull_mode = 2
albedo_color = Color(0.724963, 0.432528, 0.212802, 1)
roughness = 0.909326

[sub_resource type="BoxShape3D" id="BoxShape3D_w48qg"]
size = Vector3(30, 10, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_dg77c")
metadata/_custom_type_script = ExtResource("2_82xsv")

[node name="XROrigin3D" parent="." instance=ExtResource("3_4c57u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.54034, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.915601, -0.0684536, 0.396218, -0.277589, 0.605284, 0.74604, -0.290894, -0.79306, 0.535197, 5.11836, 27.1998, -6.56419)
light_energy = 2.778
shadow_enabled = true

[node name="SpotLightIntoTree" type="SpotLight3D" parent="."]
transform = Transform3D(0.0897997, -0.51664, 0.851481, 0.344425, 0.818295, 0.46018, -0.934509, 0.251947, 0.251426, -2.49994, 13.5274, -50.9626)
visible = false
light_color = Color(0.67451, 1, 1, 1)
light_energy = 100.0
light_projector = ExtResource("6_vivmo")
shadow_enabled = true
spot_range = 20.0
spot_angle = 14.2247
spot_angle_attenuation = 0.0281641

[node name="FireFlies" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.553757, 1.35127, -2.05955)
script = ExtResource("9_2cqfq")

[node name="Timer" type="Timer" parent="FireFlies"]
wait_time = 2.0
autostart = true

[node name="FlyList" type="Node3D" parent="FireFlies"]

[node name="FireFly" parent="FireFlies/FlyList" instance=ExtResource("10_yaehf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.361655, 0)
flyvelocity = 10.02

[node name="BugSquelch" type="AudioStreamPlayer3D" parent="FireFlies"]
stream = ExtResource("11_074og")
volume_db = 15.294
pitch_scale = 1.73

[node name="Stump" type="CSGBox3D" parent="." groups=["chisable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.24614, -0.010783, -2.24788)
use_collision = true
collision_layer = 24577
size = Vector3(1, 1.2, 1)

[node name="Breakable" parent="." instance=ExtResource("9_yaehf")]
transform = Transform3D(0.593194, 0, -0.805059, 0, 1, 0, 0.805059, 0, 0.593194, -2.70826, 0.581937, -1.81971)

[node name="DomiTools" type="Node3D" parent="."]

[node name="Chisel" parent="DomiTools" instance=ExtResource("14_vivmo")]
transform = Transform3D(0.934981, -0.354699, 0, 0.354699, 0.934981, 0, 0, 0, 1, -1.08531, 0.945827, -1.9544)

[node name="Hammer" parent="DomiTools" instance=ExtResource("15_yaehf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4279, 0.949032, -1.89003)
collision_layer = 98308
collision_mask = 229383

[node name="InsideTreeStuff" type="Node3D" parent="."]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -7.00771, 2.42495, -51.3526)
script = ExtResource("12_w48qg")

[node name="PosIntoTree" type="MeshInstance3D" parent="InsideTreeStuff"]
transform = Transform3D(0.965336, 0, 0.26101, 0, 1, 0, -0.26101, 0, 0.965336, 0, 0, 0)
mesh = SubResource("PrismMesh_yaehf")
skeleton = NodePath("")

[node name="Runecarve1" parent="InsideTreeStuff" instance=ExtResource("9_yaehf")]
transform = Transform3D(0.901303, 0.108223, 0.419452, -0.119218, 0.992868, -1.3438e-09, -0.416461, -0.0500062, 0.907777, 1.51141, 0.488745, -0.808151)

[node name="Toolshelf" type="CSGCombiner3D" parent="InsideTreeStuff"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.311392, -1.60554)
material_override = SubResource("StandardMaterial3D_vivmo")
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="InsideTreeStuff/Toolshelf"]
size = Vector3(1, 1.3, 1)

[node name="CandleStick" type="CSGCylinder3D" parent="InsideTreeStuff"]
transform = Transform3D(1, -2.98023e-08, -5.96046e-08, 2.98023e-08, 1, 5.92923e-21, 5.96046e-08, -1.77636e-15, 1, -1.81227, 0.784325, 0.284069)
material_override = SubResource("StandardMaterial3D_2cqfq")
radius = 0.149902
height = 0.842773

[node name="CSGTorus3D" type="CSGTorus3D" parent="InsideTreeStuff/CandleStick"]
operation = 2
inner_radius = 0.10332
outer_radius = 0.338683
smooth_faces = false

[node name="CSGTorus3D2" type="CSGTorus3D" parent="InsideTreeStuff/CandleStick"]
transform = Transform3D(1, -2.64699e-23, 0, -2.64699e-23, 1, 0, 0, 0, 1, 0, -0.234972, 0)
operation = 2
inner_radius = 0.113891
outer_radius = 0.336719
smooth_faces = false

[node name="CSGTorus3D3" type="CSGTorus3D" parent="InsideTreeStuff/CandleStick"]
transform = Transform3D(1, -2.64699e-23, 0, -2.64699e-23, 1, 0, 0, 0, 1, 0, 0.205715, 0)
operation = 2
inner_radius = 0.113891
outer_radius = 0.336719
smooth_faces = false

[node name="CandlestickActivation" type="Area3D" parent="InsideTreeStuff"]
transform = Transform3D(1, -2.98023e-08, -5.96046e-08, 2.98023e-08, 1, 5.92923e-21, 5.96046e-08, -1.77636e-15, 1, -1.81227, 1.24205, 0.284069)
collision_layer = 0
collision_mask = 131072

[node name="CollisionShape3D" type="CollisionShape3D" parent="InsideTreeStuff/CandlestickActivation"]
transform = Transform3D(0.999999, -0.00125664, 2.30926e-14, 0.00125664, 0.999999, -3.74507e-11, 2.30926e-14, 3.74507e-11, 1, -0.000804901, 0.0632808, 0)
shape = SubResource("CylinderShape3D_yaehf")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="InsideTreeStuff/CandlestickActivation"]
stream = ExtResource("13_yaehf")

[node name="CandleLightConetree" type="OmniLight3D" parent="InsideTreeStuff"]
transform = Transform3D(1, -2.98023e-08, -5.96046e-08, 2.98023e-08, 1, 5.92923e-21, 5.96046e-08, -1.77636e-15, 1, -1.81227, 1.3224, 0.284069)
visible = false
light_color = Color(1, 1, 0.0784314, 1)
light_energy = 1.696
light_bake_mode = 1
omni_range = 6.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="InsideTreeStuff/CandleLightConetree"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.073804, 0)
mesh = SubResource("CylinderMesh_dg77c")

[node name="Chisel" parent="InsideTreeStuff" instance=ExtResource("14_vivmo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.156356, 1.30085, -1.14828)

[node name="PhysicsChiselContainer" parent="InsideTreeStuff/Chisel" index="0"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -7.16407, 3.7258, -52.5009)

[node name="XRToolsPickable" parent="InsideTreeStuff/Chisel" index="1"]
transform = Transform3D(1, 0, 2.98023e-08, 0, 1, 0, -2.98023e-08, 0, 1, -7.16407, 3.7258, -52.5009)

[node name="Hammer" parent="InsideTreeStuff" instance=ExtResource("15_yaehf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.226424, 1.10994, -1.30636)

[node name="TreeHollowShadow" type="MeshInstance3D" parent="InsideTreeStuff"]
transform = Transform3D(1.79739, 0, 1.77636e-15, 0, 1.04605, 0, 0, 0, 0.961867, 0, -0.598935, -0.0569572)
visible = false
mesh = SubResource("CylinderMesh_w48qg")

[node name="TreeDoorCover" type="CSGBox3D" parent="InsideTreeStuff"]
transform = Transform3D(0.970959, 9.46183e-09, 0.239245, -0.0759572, 0.948263, 0.308267, -0.226867, -0.317487, 0.920724, 0.930458, 0.778532, 3.14654)
size = Vector3(5, 5, 1)
material = SubResource("StandardMaterial3D_w48qg")

[node name="TreeApproachArea" type="Area3D" parent="InsideTreeStuff"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.40353, -2.92539, 16.1088)
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape3D" type="CollisionShape3D" parent="InsideTreeStuff/TreeApproachArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10845, 0)
shape = SubResource("BoxShape3D_w48qg")

[node name="VultureSound" type="AudioStreamPlayer3D" parent="InsideTreeStuff/TreeApproachArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.9858, 0)
stream = ExtResource("13_2cqfq")

[node name="World" type="Node3D" parent="."]

[node name="Enviroment" parent="World" instance=ExtResource("12_ycdy4")]

[node name="Terrain" parent="World/Enviroment" index="2"]
transform = Transform3D(0.999996, 8.70241e-05, -0.00278232, -9.14029e-05, 0.999999, -0.00156591, 0.00278218, 0.00156615, 0.999995, 0, 0, 0)

[node name="PosSpawnPoint" type="MeshInstance3D" parent="World"]
transform = Transform3D(0.952044, 0, 0.307108, 0, 1, 0, -0.35155, 0, 1.14704, -7.27831, -1.49794, 1.93332)
mesh = SubResource("PrismMesh_yaehf")
skeleton = NodePath("")

[node name="TweetingBirdsong" type="AudioStreamPlayer3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30.3288, 0)
stream = ExtResource("14_2cqfq")
attenuation_model = 3
volume_db = -16.703
autoplay = true

[node name="Cockatrice" parent="." instance=ExtResource("16_2cqfq")]
transform = Transform3D(-0.0644663, -0.256714, 0.964335, -0.119335, 0.961394, 0.247953, -0.990759, -0.0990943, -0.0926124, -2.96153, 4.28351, -47.5331)

[connection signal="timeout" from="FireFlies/Timer" to="FireFlies" method="_on_timer_timeout"]
[connection signal="body_entered" from="InsideTreeStuff/CandlestickActivation" to="." method="_on_candlestick_activation_body_entered"]
[connection signal="body_entered" from="InsideTreeStuff/TreeApproachArea" to="." method="_on_tree_approach_area_body_entered"]

[editable path="InsideTreeStuff/Chisel"]
[editable path="InsideTreeStuff/Chisel/PhysicsChiselContainer/Chisel2"]
[editable path="World/Enviroment"]
